# com.eirb.fr

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  environment.yaml  environment.yml  justfile  pyproject.toml
components/: README.md  index.html  package.json  vite.config.ts
components/src/: App.svelte  HelpModal.svelte  PromptConsole.svelte  index.html  main.ts  telegram.css
components/src/lib/: markdown-to-message-html.ts  store-inputs.ts
components/src/renderer/: Classic.svelte  Renderer.svelte  Telegram.svelte  index.ts
components/src/runes/: html-rendered-content.svelte.ts  markdown-content.svelte.ts  preview.svelte.ts
frontend/: package.json  svelte.config.js
frontend/src/: app.html  vite-env.d.ts
frontend/src/lib/: bot-public-credentials.ts  markdown-to-message-html.ts  send-message.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/components/: App.svelte  HelpModal.svelte  PlatformSelector.svelte  PreviewButton.svelte  PromptConsole.svelte  store-inputs.ts
frontend/src/routes/components/renderer/: Classic.svelte  Renderer.svelte  Telegram.svelte
frontend/src/routes/components/renderer/css/: classic-renderer.css  (+2 more)
frontend/src/routes/components/runes/: display-help-modal.svelte.ts  html-rendered-content.svelte.ts  markdown-content.svelte.ts
frontend/src/types/: markdown-it-plugin-underline.d.ts
src/: main.py
src/eirb_com_helper/: bot.py  chat_id_giver.py  converter.py  env.py  server.py  start.py
src/eirb_com_helper/templates/: frontend.html
templates/: frontend.j2  oldfrontend.j2
