[project]
name = "eirb-com-helper"
version = "1.0.0"
description = "Tool for writing multi-platform messages, all from one markdown syntax."
readme = "README.md"
authors = [
  {name = "Thomas HORRUT", email = "thomas.horrut@bordeaux-inp.fr"}
]
packages = [{include = "eirb-com-helper"}]

requires-python = ">=3.13,<4.0"

dependencies = [
  "telegramify-markdown (>=0.1.12)",
  "aiogram (>=3.13.1)",
  "python-dotenv-vault (>=0.6.4)",
  "Flask (>=3.0.3)",
  "Flask-Cors (>=5.0.0)",
  "sulguk (>=0.8.0)",
  "bleach (>=6.1.0)",
  "colorama (>=0.4.6,<0.5.0)",
  "flask-vite (>=0.6.0,<0.7.0)",
]

[project.scripts]
main="main"

[tool.poetry.group.dev.dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
